@@ -1,3 +1,8 @@
+2010-06-20  Koen Pijnenburg <kpijnenburg@supportware.nl>
+
+	* appkit.cs: Apply patches from Koen to add support for the
+	delegate and datasources on the NSOutlineView. 
+
 2010-04-23  Miguel de Icaza  <miguel@novell.com>
 
 	* appkit.cs: Contributions from James Clancey:
